styling fixes for text that is too long

--- a/wrapped/src/components/Header/styles.css
+++ b/wrapped/src/components/Header/styles.css
@@ -1,8 +1,13 @@
 .header{
     width:100%;
+    position: absolute;
+    top: 50%;
+    left:0;
+    right:0;
+    transform: translateY(-35%);
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     max-width: 100svh;
     margin: auto;
 }
@@ -32,4 +37,8 @@ img{
     width:10svh;
     height:10svh;
     object-fit: cover;
+}
+
+h4{
+    font-size: clamp(20px,6vw,40px);
 }
