--- a/wrapped/src/components/Loading/styles.css
+++ b/wrapped/src/components/Loading/styles.css
@@ -57,6 +57,9 @@
     opacity:1;
     transition-duration: 1s;
     width: 100%;
+    height: 100%;
+    margin: auto;
+    margin-top: 1svh;
 }
 
 
